<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- General -->
    <skip />
    <!-- Application name -->
    <string name="app_name">Shimeji Mascot Wallpaper</string>

	<string name="livewallpaper_settings">Settings</string>
	<string name="backTitle">Choose background image</string>
	<string name="imgTitle">Choose Images Folder</string>
	<string name="imgSum">Labeled "shime1" to "shime46"</string>
	<string name="backSum">Select an image for the background</string>
	<string name="defaultTitle">Set to defaults</string>
	<string name="positionSum">Choose the position of the background relative to the screen</string>
	<string name="positionTitle">Background Position</string>
	<string name="bottomSum">Change the floor height. Might be necessary for some custom launchers</string>
	<string name="bottomTitle">Floor Height</string>
	<string name="statSum">Change the status bar height used. Might be necessary for some custom launchers</string>
	<string name="statTitle">Statusbar Height</string>
</resources>
